<resources>
    <string name="app_name">Lotto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="enter_player_name">Please enter your player name</string>
    <string name="saved">Successfully saved</string>
    <string name="close">Close</string>
    <string name="lose">Unfortunately you lost!</string>
    <string name="gold">Gold</string>
    <string name="giorgi">George</string>
    <string name="dato">David</string>
    <string name="ana">Victoria</string>
    <string name="mari">Mari</string>
    <string name="nika">Nick</string>
    <string name="tatia">Emily</string>
    <string name="eka">Catherine</string>
    <string name="irakli">John</string>
    <string name="lizi">Scarlett</string>
    <string name="salome">Evelyn</string>
    <string name="elene">Charlotte</string>
    <string name="natia">Isabella</string>
    <string name="tea">Sophia</string>
    <string name="ilia">Henry</string>
    <string name="andria">Alexander</string>
    <string name="luka">Lucas</string>
    <string name="lasha">James</string>
    <string name="beka">William</string>
    <string name="tornike">Oliver</string>
    <string name="lili">Lily</string>
    <string name="change">Change</string>
    <string name="start">Start</string>
    <string name="chip">Chip</string>
    <string name="o">0</string>
    <string name="max_bet">Maximum bet is 500 !</string>
    <string name="min_bet">Minimum bet is 5 !</string>
    <string name="win">You win !</string>
    <string name="draw">Draw</string>
    <string name="line_is_filled">The line is filled</string>
    <string name="opponent_line_is_filled">line is filled</string>
    <string name="no_money">You don\'t have enough money</string>
    <string name="hint_enable">Enable hints</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="game_speed">Game speed</string>
    <string name="game_language">Game language</string>
    <string name="shuffle">Shuffling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="get_coin">+1000 coins</string>
    <string name="add_credit">You have been credited with 1000 coins</string>
    <string name="new_balance_is">Your new balance is</string>
    <string name="coins">coins</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="single_player">New game</string>
    <string name="multi_player">Multi player</string>
    <string name="high_score">High score</string>
    <string name="ok">OK</string>
    <string name="your_rating">"Your rating is "</string>
    <string name="wins">Win:</string>
    <string name="loses">Lose:</string>
    <string name="your_balance">Your balance is</string>
    <string name="valuta">$</string>
    <string name="back">Back</string>
    <string name="privacy_policy">Privacy policy</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="input_required">All fields are required</string>
    <string name="registration_success">You are successfully registered</string>
    <string name="enter_email">Please enter your email</string>
    <string name="reset_password">Email sent successfully to reset your password!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_password">Please enter your password</string>
    <string name="registration">Registration</string>
    <string name="recovery_password">Password recovery</string>
    <string name="login">Login</string>
    <string name="name">Please enter your nickname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="notification">Notification</string>
    <string name="enter_the_password">Enter password</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_password">Wrong password</string>
    <string name="room_name">Room name</string>
    <string name="enable_password">Set password</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="room_exist">A room with that name already exists</string>
    <string name="room_created">Room successfully created</string>
    <string name="error">Error</string>
    <string name="total_users_count">Total register users is</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remember">Remember</string>
    <string name="create_room">Create room</string>
    <string name="room_not_found">No available rooms found</string>
    <string name="money">Money</string>
    <string name="bet_coins">"Set bet "</string>
    <string name="_0">0</string>
    <string name="free">Free</string>
    <string name="bet_is">Bet is</string>
    <string name="bet">Bet</string>
    <string name="min_bets">Minimum bet is 100</string>
    <string name="no">No</string>
    <string name="confirm_delete_message">Do you really want to delete the user?</string>
    <string name="balance_updated">Your balance has been updated</string>
    <string name="get_rating">Your rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_users">Top 10 user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recovery">Recovery</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="change_password">Change password</string>
    <string name="delete_user">Delete user</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>